syntax = "proto3";

package conduit.v1;

option go_package = "github.com/conduitio/conduit-connector-protocol/proto/conduit/v1";

service SchemaService {
  rpc Create(CreateSchemaRequest) returns (CreateSchemaResponse);
  rpc Get(GetSchemaRequest) returns (GetSchemaResponse);
}

message Schema {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_AVRO = 1;
  }

  // The schema's globally unique ID
  string id = 1;
  // The schema's name (globally unique)
  string name = 2;
  int32 version = 3;
  Type type = 4;
  // The schema contents
  bytes bytes = 5;
}

message CreateSchemaRequest {
  // The schema name. It needs to be unique in the scope of a connector.
  string name = 1;
  Schema.Type type = 2;
  bytes bytes = 3;
}
message CreateSchemaResponse {
  Schema schema = 1;
}

message GetSchemaRequest {
  string id = 1;
}
message GetSchemaResponse {
  Schema schema = 1;
}
